--- a/src/components/URLContainer/URLContainer.module.css
+++ b/src/components/URLContainer/URLContainer.module.css
@@ -1,15 +1,15 @@
-.linkContainer {
-	display: flex;
-    gap: 0.5rem;
-	align-items: center;
-}
-
 .link {
-	color: #4338ca;
-	display: flex;
-	align-items: center;
+	color: #5BBCFF;;
 }
 
-.copyIcon {
-	height: 35px !important;
+.urlContainer {
+	display: flex;
+	justify-content: space-between;
+	gap: 0.5rem;
+	word-break: break-word;
+}
+
+.copyIcon:hover {
+	cursor: pointer;
+	color: #4d4dff;
 }
